# vvctre-plugin-default-enabled-lle-modules-file

./: .gitignore  .gitmodules  CMakeLists.txt  cycle-custom-layouts-plugin-settings.json  enable-lle-modules-example.txt  module-names.txt  plugin.cpp
.github/workflows/: build.yml
